--- a/bin/auditd/auditd.8
+++ b/bin/auditd/auditd.8
@@ -1,4 +1,5 @@
-.\" Copyright (c) 2004, Apple Computer, Inc.  All rights reserved.
+.\" Copyright (c) 2004 Apple Computer, Inc.
+.\" All rights reserved.
 .\"
 .\" @APPLE_BSD_LICENSE_HEADER_START@
 .\" 
@@ -27,6 +28,8 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\" 
 .\" @APPLE_BSD_LICENSE_HEADER_END@
+.\"
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#3 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDITD 8
