--- a/bin/auditd/auditd.8
+++ b/bin/auditd/auditd.8
@@ -29,7 +29,7 @@
 .\"
 .\" @APPLE_BSD_LICENSE_HEADER_END@
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#4 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#5 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDITD 8
@@ -67,7 +67,10 @@ daemon should not be started and stopped manually.  Instead, the audit(1) comman
 should be used to inform the daemon to change state/configuration after altering
 the audit_control file.
 .Pp
-Sending a SIGHUP to a running
+.\" Sending a SIGHUP to a running
+.\" .Nm auditd
+.\" daemon will force it to exit.
+Sending a SIGTERM to a running
 .Nm auditd
 daemon will force it to exit.
 .Sh FILES
