--- a/CHANGELOG
+++ b/CHANGELOG
@@ -62,6 +62,7 @@ OpenBSM 1.0
   _free() calls dropped as a result, and source code compatibility with
   OpenSolaris improved significantly.
 - Annotate BSM events with origin OS and compatibility information.
-- auditd(8) added to the OpenBSM distribution.
+- auditd(8), audit(8) added to the OpenBSM distribution.  auditd extended
+  to support reloading of kernel event table.
 
-$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#5 $
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#6 $
