Missing word fix, pointed out by C. Brueffer.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90939]

--- a/bin/audit/audit.8
+++ b/bin/audit/audit.8
@@ -29,7 +29,7 @@
 .\" 
 .\" @APPLE_BSD_LICENSE_HEADER_END@
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#3 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#4 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDIT 8
@@ -44,7 +44,7 @@
 .Sh DESCRIPTION
 The
 .Nm 
-utility controls the state of auditing system.
+utility controls the state of the audit system.
 The optional
 .Ar file
 operand specifies the location of the audit control input file (default
