--- a/man/audit_event.5
+++ b/man/audit_event.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#6 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDIT_EVENT 5
@@ -42,7 +42,9 @@ Entries are of the form
 .Dl eventnum:eventname:description:eventclass .
 Each
 .Vt eventclass
-should have a corresponding entry in the audit_class file.
+should have a corresponding entry in the
+.Pa audit_class
+file.
 See 
 .Xr audit_class 5
 for details.
