--- a/README
+++ b/README
@@ -63,6 +63,7 @@ to the development of OpenBSM:
     Chunyang Yuan
     Poul-Henning Kamp
     Christian Brueffer
+    Olivier Houchard
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -84,4 +85,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#12 $
+$P4: //depot/projects/trustedbsd/openbsm/README#13 $
