--- a/man/audit_event.5
+++ b/man/audit_event.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#7 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#8 $
 .\"
 .Dd January 24, 2004
 .Dt AUDIT_EVENT 5
@@ -38,8 +38,10 @@ The
 .Nm 
 file contains descriptions of the auditable events on the system.
 Each line maps an audit event number to a name, a description, and a class.
-Entries are of the form
-.Dl eventnum:eventname:description:eventclass .
+Entries are of the form:
+.Pp
+.Dl eventnum:eventname:description:eventclass
+.Pp
 Each
 .Vt eventclass
 should have a corresponding entry in the
