--- a/CHANGELOG
+++ b/CHANGELOG
@@ -71,5 +71,6 @@ OpenBSM 1.0 alpha 1
 - Annotate BSM events with origin OS and compatibility information.
 - auditd(8), audit(8) added to the OpenBSM distribution.  auditd extended
   to support reloading of kernel event table.
+- Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#7 $
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#8 $
