--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+OpenBSM 1.0 alpha 3
+
+- auditd will now fchown() the trail file to the audit review group, if
+  defined at compile-time.
+- Added AUE_SYSARCH for FreeBSD.
+
 OpenBSM 1.0 alpha 2
 
 - Man page formatting improvements.
@@ -73,4 +79,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#8 $
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#9 $
