--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
 OpenBSM 1.0 alpha 3
 
+- Man page formatting, cross reference, mlinks, and accuracy improvements.
+- auditd and tools now compile and run on FreeBSD/arm.
 - auditd will now fchown() the trail file to the audit review group, if
   defined at compile-time.
 - Added AUE_SYSARCH for FreeBSD.
+- Definition of AUE_SETFSGID fixed for Linux.
 
 OpenBSM 1.0 alpha 2
 
@@ -79,4 +82,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#9 $
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#10 $
