--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+OpenBSM 1.0 alpha 4
+
+- Remove "audit" user example from audit_user, as it's not present on most
+  systems.
+
 OpenBSM 1.0 alpha 3
 
 - Man page formatting, cross reference, mlinks, and accuracy improvements.
@@ -82,4 +87,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#10 $
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#11 $
