--- a/HISTORY
+++ b/HISTORY
@@ -20,6 +20,8 @@ OpenBSM 1.0 alpha 6
   definition.  Don't try to retrieve time zone information using
   gettimeofday(), as it's not needed, and introduces possible failure
   modes.
+- Always read and write process32 and subject32 machine/addr fields in
+  network byte order.
 
 OpenBSM 1.0 alpha 5
 
@@ -147,4 +149,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#5 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#6 $
