--- a/HISTORY
+++ b/HISTORY
@@ -24,6 +24,9 @@ OpenBSM 1.0 alpha 6
   the terminal ID that appears in the process32/subject32 tokens.  These
   are assumed to be IP addresses, and as such, to be in network byte
   order.
+- Universally, APIs now assume that IP addresses and ports are provided
+  in network byte order.  APIs now generally provide these types in
+  network byte order when decoding.
 
 OpenBSM 1.0 alpha 5
 
@@ -151,4 +154,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#7 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#8 $
