--- a/HISTORY
+++ b/HISTORY
@@ -27,6 +27,8 @@ OpenBSM 1.0 alpha 6
 - Universally, APIs now assume that IP addresses and ports are provided
   in network byte order.  APIs now generally provide these types in
   network byte order when decoding.
+- Beginnings of an OpenBSM test framework can now be found in openbsm/test.
+  This code is not built or installed by default.
 
 OpenBSM 1.0 alpha 5
 
@@ -154,4 +156,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#8 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#9 $
