--- a/libbsm/audit_submit.3
+++ b/libbsm/audit_submit.3
@@ -24,18 +24,19 @@ The return token of is dependant on the
 .Fa status
 and
 .Fa reterr
-arguments. Optionally, a text token will be created as a part of this record.
+arguments.
+Optionally, a text token will be created as a part of this record.
 .Pp
 Text token output is under the control of a
 .Fa format
 string that specifies how subsequent arguments (or arguments accessed via the
 variable-length argument facilities of
-.Xr stdarg 3
-are converted for output. If
+.Xr stdarg 3 )
+are converted for output.
+If
 .Fa format
 is NULL, then no text token is created in the audit record.
 .Sh EXAMPLES
-.Pp
 .Bd -literal -offset indent
 #include <bsm/audit.h>
 #include <bsm/libbsm.h>
@@ -56,7 +57,7 @@ audit_bad_su(char *from_login, char *to_login)
 }
 .Ed
 .Pp
-Will generate the followng audit record:
+Will generate the following audit record:
 .Bd -literal -offset indent
 header,94,1,su(1),0,Mon Apr 17 23:23:59 2006, + 271 msec
 subject,root,root,wheel,root,wheel,652,652,0,0.0.0.0
@@ -71,6 +72,10 @@ trailer,94
 .Sh HISTORY
 The
 .Nm
-function was written by Christian S.J. Peron <csjp@FreeBSD.org> and
-first appeared in OpenBSM version 1.0. OpenBSM 1.0 was introduced in
-FreeBSD 7.0.
+first appeared in OpenBSM version 1.0.
+OpenBSM 1.0 was introduced in FreeBSD 7.0.
+.Sh AUTHORS
+The
+.Nm
+function was written by
+.An Christian S.J. Peron Aq csjp@FreeBSD.org .
