s/au_ctx/auid to be more consistent with the rest of the API naming convention.
Requested by:	rwatson

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 96000]

--- a/libbsm/audit_submit.3
+++ b/libbsm/audit_submit.3
@@ -26,7 +26,7 @@
 .\" STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#6 $
 .Dd April 11, 2006
 .Dt audit_submit 3
 .Os
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .In stdio.h
 .Ft int
-.Fn audit_submit "short au_event" "au_id_t au_ctx" "char status" "int reterr" "const char * restrict format" ...
+.Fn audit_submit "short au_event" "au_id_t auid" "char status" "int reterr" "const char * restrict format" ...
 .Sh DESCRIPTION
 The
 .Nm
