Correct the command name in the SYNOPSIS section.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 96523]

--- a/man/auditctl.2
+++ b/man/auditctl.2
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/auditctl.2#4 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/auditctl.2#5 $
 .\"
 .Dd April 19, 2005
 .Dt AUDITCTL 2
@@ -34,7 +34,7 @@
 .Sh SYNOPSIS
 .In bsm/audit.h
 .Ft int
-.Fn auditon "const char *path"
+.Fn auditctl "const char *path"
 .Sh DESCRIPTION
 The
 .Fn auditctl
