--- a/libbsm/audit_submit.3
+++ b/libbsm/audit_submit.3
@@ -26,8 +26,10 @@
 .\" STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#7 $
-.Dd April 11, 2006
+.\"
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#8 $
+.\"
+.Dd May 29, 2006
 .Dt audit_submit 3
 .Os
 .Sh NAME
@@ -44,12 +46,12 @@ The
 .Nm
 function provides a generic programming interface for audit record submission.
 This audit record will contain a header, subject token, an optional text token,
-return token, and a trailer. The header will contain the event class specified
-by
+return token, and a trailer.
+The header will contain the event class specified by
 .Fa au_event .
 The subject token will be generated based on
 .Fa au_ctx .
-The return token of is dependant on the
+The return token is dependant on the
 .Fa status
 and
 .Fa reterr
@@ -72,7 +74,8 @@ assumes that
 .Xr setaudit 2 ,
 or
 .Xr setaudit_addr 2 
-has already been called. As a direct result, the terminal ID for the
+has already been called.
+As a direct result, the terminal ID for the
 subject will be retrieved from the kernel via
 .Xr getaudit 2 ,
 or
@@ -114,7 +117,7 @@ trailer,94
 .Sh HISTORY
 The
 .Nm
-first appeared in OpenBSM version 1.0.
+function first appeared in OpenBSM version 1.0.
 OpenBSM 1.0 was introduced in FreeBSD 7.0.
 .Sh AUTHORS
 The
