--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+OpenBSM 1.0 alpha 7
+
+- Adopted Solaris-compatible format for subject32_ex and subject64_ex
+  tokens, which previously did not correctly implement variable length
+  address storage.
+
 OpenBSM 1.0 alpha 6
 
 - Use AU_TO_WRITE and AU_NO_TO_WRITE for the 'keep' argument to au_close();
@@ -165,4 +171,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#12 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#13 $
