--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,9 @@ OpenBSM 1.0 alpha 7
 - Adopted Solaris-compatible format for subject32_ex and subject64_ex
   tokens, which previously did not correctly implement variable length
   address storage.
+- Prefer inttypes.h to stdint.h; enhance queue.h detection to test for
+  TAILQ_FOREACH_SAFE(), which is present in recent BSD queue.h's, but not
+  older ones.  OpenBSM now builds on some FreeBSD 4.x version.
 
 OpenBSM 1.0 alpha 6
 
@@ -171,4 +174,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#13 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#14 $
