--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 8
+
 OpenBSM 1.0 alpha 7
 
 - Adopted Solaris-compatible format for subject32_ex and subject64_ex
@@ -175,4 +177,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#15 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#16 $
