--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,7 @@
 OpenBSM 1.0 alpha 8
 
+- Correct typo in definition of AUR_INT.
+
 OpenBSM 1.0 alpha 7
 
 - Adopted Solaris-compatible format for subject32_ex and subject64_ex
@@ -177,4 +179,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#16 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#17 $
