--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
 OpenBSM 1.0 alpha 8
 
 - Correct typo in definition of AUR_INT.
+- Adopt OpenSolaris constant values for AUDIT_* configuration flags.
 
 OpenBSM 1.0 alpha 7
 
@@ -179,4 +180,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#17 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#18 $
