--- a/HISTORY
+++ b/HISTORY
@@ -2,6 +2,9 @@ OpenBSM 1.0 alpha 8
 
 - Correct typo in definition of AUR_INT.
 - Adopt OpenSolaris constant values for AUDIT_* configuration flags.
+- Arguments to au_to_exec_args() and au_to_exec_env() no longer const.
+- Add kernel versions of au_to_exec_args() and au_to_exec_env().
+- Fix exec argument type that is printed for env strings from 'arg' to 'env'.
 
 OpenBSM 1.0 alpha 7
 
@@ -180,4 +183,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#18 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#19 $
