--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+OpenBSM 1.0 alpha 9
+
+- Further refine audit filter API to avoid encoding "BSM"/"bsm" strings into
+  it; prefer "AUDIT"/"audit".
+
 OpenBSM 1.0 alpha 8
 
 - Correct typo in definition of AUR_INT.
@@ -192,4 +197,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#22 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#23 $
