--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,8 @@
 OpenBSM 1.0 alpha 9
 
-- Further refine audit filter API to avoid encoding "BSM"/"bsm" strings into
-  it; prefer "AUDIT"/"audit".
+- Rename many OpenBSM-specific constants and API elements containing the
+  strings "BSM" and "bsm" to "AUDIT" and "audit", observing that this is
+  true for almost all existing constants and APIs.
 
 OpenBSM 1.0 alpha 8
 
@@ -197,4 +198,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#23 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#24 $
