--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 11
+
 OpenBSM 1.0 alpha 10
 
 - auditd now generates complete audit records for its events, as required for
@@ -209,4 +211,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#26 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#27 $
