--- a/man/audit_control.5
+++ b/man/audit_control.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_control.5#10 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_control.5#11 $
 .\"
 .Dd January 4, 2006
 .Dt AUDIT_CONTROL 5
@@ -113,7 +113,7 @@ Include a unique audit sequence number token in generated audit records (not
 implemented on FreeBSD or Darwin).
 .It group
 Include supplementary groups list in generated audit records (not implemented
-on FreeBSD or Darwin; supplementary groupsi are never included in records on
+on FreeBSD or Darwin; supplementary groups are never included in records on
 these systems).
 .It trail
 Append a trailer token to each audit record (not implemented on FreeBSD or
