--- a/HISTORY
+++ b/HISTORY
@@ -24,7 +24,9 @@ OpenBSM 1.0 alpha 11
 - Update audump to print the audit_control policy field.
 - Update auditd to read the audit_control policy field and set the kernel
   policy to match it when configuring/reconfiguring.  Remove the -s and -h
-  arguments as these policies are now set via the configuration file.
+  arguments as these policies are now set via the configuration file.  If a
+  policy line is not found in the configuration file, continue with the
+  current default of setting AUDIT_CNT.
 - Fix bugs in the parsing of large execve(2) arguments and environmental
   variable tokens; increase maximum parsed argument and variable count.
 
@@ -239,4 +241,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#30 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#31 $
