--- a/HISTORY
+++ b/HISTORY
@@ -29,6 +29,7 @@ OpenBSM 1.0 alpha 11
   current default of setting AUDIT_CNT.
 - Fix bugs in the parsing of large execve(2) arguments and environmental
   variable tokens; increase maximum parsed argument and variable count.
+- configure now detects strlcat(), used by policy-related functions.
 
 OpenBSM 1.0 alpha 10
 
@@ -241,4 +242,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#31 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#32 $
