--- a/HISTORY
+++ b/HISTORY
@@ -30,6 +30,7 @@ OpenBSM 1.0 alpha 11
 - Fix bugs in the parsing of large execve(2) arguments and environmental
   variable tokens; increase maximum parsed argument and variable count.
 - configure now detects strlcat(), used by policy-related functions.
+- Reference token and record sample files added to test tree.
 
 OpenBSM 1.0 alpha 10
 
@@ -242,4 +243,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#32 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#33 $
