--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 12
+
 OpenBSM 1.0 alpha 11
 
 - Reclassify certain read/write operations as having no class rather than the
@@ -243,4 +245,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#33 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#34 $
