--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,11 @@
 OpenBSM 1.0 alpha 12
 
+- Correct bug in auditreduce which prevented the -c option from working
+  correctly when the user specifies to process successful or failed events.
+  The problem stemmed from not having access to the return token at the time
+  the initial preselection occurred, but now a second preselection process
+  occurs while processing the return token.
+
 OpenBSM 1.0 alpha 11
 
 - Reclassify certain read/write operations as having no class rather than the
@@ -245,4 +251,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#34 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#35 $
