--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+OpenBSM 1.0 alpha 13
+
 OpenBSM 1.0 alpha 12
 
 - Correct bug in auditreduce which prevented the -c option from working
@@ -264,4 +266,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#39 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#40 $
