--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,8 @@
 OpenBSM 1.0 alpha 13
 
+- compat/clock_gettime.h now provides a compatibility implementation of
+  clock_gettime(), which fixes building on Mac OS X.
+
 OpenBSM 1.0 alpha 12
 
 - Correct bug in auditreduce which prevented the -c option from working
@@ -266,4 +269,4 @@ OpenBSM 1.0 alpha 1
   to support reloading of kernel event table.
 - Allow comments in /etc/security configuration files.
 
-$P4: //depot/projects/trustedbsd/openbsm/HISTORY#40 $
+$P4: //depot/projects/trustedbsd/openbsm/HISTORY#41 $
